--- a/galeria.html
+++ b/galeria.html
@@ -20,7 +20,7 @@
         <h2>Galeria de Imagens</h2>
         <table>
             <tr>
-                <td><img src="iclinica1.jpg" height="200" width="200" alt="Imagem 1"></td>
+                <td><img src="clinica1.jpg" height="200" width="200" alt="Imagem 1"></td>
                 <td><img src="clinica2.jpg" height="200" width="200" alt="Imagem 2"></td>
                 <td><img src="clinica3.jpg" height="200" width="200" alt="Imagem 3"></td>
                 <td><img src="clinica4.jpg" height="200" width="200" alt="Imagem 4"></td>
